# fabric-godot-core

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/: CODEOWNERS  changed_files.yml
.github/workflows/: linux_builds.yml  runner.yml  static_checks.yml
core/math/: predictive_bvh_adapter.h  probe_octree.h
doc/classes/: AudioServer.xml  ChainIK3D.xml  Control.xml  Crypto.xml  CryptoKey.xml  HumanoidKusudamaRom.xml  JointLimitation3D.xml  JointLimitationKusudama3D.xml  OTelDocument.xml  OTelExporterFile.xml  OTelLog.xml  OTelMetric.xml  OTelReflector.xml  OTelResource.xml  OTelScope.xml  OTelSpan.xml  OTelState.xml  ProjectSettings.xml  ResonanceAudioMaterialMap.xml  ResonanceAudioRoom.xml  ResourceLoader.xml  ReverbBakeData.xml  ReverbProbeGI.xml  SwingTwistIK3D.xml  X509Certificate.xml
editor/: register_editor_types.cpp
editor/audio/: editor_audio_buses.cpp  editor_audio_buses.h
editor/doc/: doc_tools.cpp
lean/http3/: PollingTermination.lean
main/: main.cpp
misc/humanoid_kusudama_rom/: README.md  assemble_joints.py  gen_humanoid_rom_header.py
modules/cassie/: REFERENCES.bib  SCsub  config.py  (+3 more)
modules/multiplayer_fabric/demo/abyssal_vr/sandbox/: .gitignore  CMakeLists.txt  build.sh  jellygrid_current.cpp  jellygrid_power_node.cpp  jellygrid_swarm.cpp  riscv-toolchain.cmake  taskweft_planner.cpp
proofs/: .gitrepo  AGENTS-research.md  CONTRIBUTING.md  LassoMapping.lean  PredictiveBVH.lean  PredictiveBVHResearch.lean  README.md  lakefile.lean  predictive_bvh.h
scene/: register_scene_types.cpp
servers/: register_server_types.cpp
(+570 files in other folders)
